--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: MTseeker
 Type: Package
 Title: Bioconductor tools for mitochondrial variant calling
-Version: 0.9.53
+Version: 0.9.1
 Date: 2018-06-15
 Author: Tim Triche, Jr., Ben Johnson, Noor Sohail
 Maintainer: Tim Triche, Jr. <tim.triche@vai.org>
@@ -23,5 +23,5 @@ Imports:
     Biostrings,
     GenomicRanges,
     GenomicAlignments
-License: Artistic
+License: GPL-3.0
 RoxygenNote: 6.0.1
