remove hg19-to-rCRS liftover support, tidy up

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,9 @@ export(addMtGeneLabel)
 export(callMT)
 export(filterMT)
 export(getMT)
+export(indexMtGenome)
 export(mtHGVS)
 export(plotMT)
-export(rCRS)
 exportClasses(MAlignments)
 exportClasses(MAlignmentsList)
 exportClasses(MVRanges)
@@ -48,4 +48,3 @@ import(VariantTools)
 import(ggplot2)
 import(ggthemes)
 import(gmapR)
-import(rtracklayer)
