fix callMT to (hopefully) run much better in parallel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(MVRanges)
 export(MVRangesList)
 export(addMtGeneLabel)
 export(callMT)
+export(callMtVars)
 export(filterMT)
 export(getMT)
 export(indexMtGenome)
@@ -36,7 +37,6 @@ exportMethods(show)
 exportMethods(summarizeVariants)
 exportMethods(tallyVariants)
 exportMethods(type)
-exportMethods(updateObject)
 import(Biostrings)
 import(GenomicAlignments)
 import(IRanges)
