update locateVariants and add injectMtVariants

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(callMtVars)
 export(filterMT)
 export(getMT)
 export(indexMtGenome)
+export(injectMtVariants)
 export(mtHGVS)
 export(plotMT)
 exportClasses(MAlignments)
@@ -39,6 +40,7 @@ exportMethods(tallyVariants)
 exportMethods(type)
 import(Biostrings)
 import(GenomicAlignments)
+import(GenomicRanges)
 import(IRanges)
 import(Rsamtools)
 import(S4Vectors)
