added `genes` method for MVRanges

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ exportMethods(coverage)
 exportMethods(encoding)
 exportMethods(fileName)
 exportMethods(filt)
+exportMethods(genes)
 exportMethods(genome)
 exportMethods(getAnnotations)
 exportMethods(granges)
