--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(filterMT)
 export(getMT)
 export(indexMtGenome)
 export(injectMtVariants)
+export(mtCircos)
 export(mtHGVS)
 export(plotMT)
 exportClasses(MAlignments)
@@ -48,6 +49,7 @@ import(S4Vectors)
 import(SummarizedExperiment)
 import(VariantAnnotation)
 import(VariantTools)
+import(circlize)
 import(ggplot2)
 import(ggthemes)
 import(gmapR)
