--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: MTseeker
 Type: Package
 Title: Bioconductor tools for mitochondrial variant calling
-Version: 0.9.19
+Version: 0.9.20
 Date: 2018-07-06
 Author: Tim Triche, Jr., Ben Johnson, Noor Sohail
 Maintainer: Tim Triche, Jr. <tim.triche@vai.org>
@@ -13,7 +13,7 @@ Depends:
     rtracklayer,
     ggthemes,
     jsonlite,
-    ggplot2
+    viridis 
 Imports:
     gmapR,
     IRanges,
