fiddling with single-cell options for mtCircos plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ exportMethods(runLength)
 exportMethods(runValue)
 exportMethods(scanBamHeader)
 exportMethods(show)
+exportMethods(snpCall)
 exportMethods(summarizeVariants)
 exportMethods(tallyVariants)
 exportMethods(type)
