add byStrand utility function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(MAlignmentsList)
 export(MVRanges)
 export(MVRangesList)
 export(addMtGeneLabel)
+export(byStrand)
 export(callMT)
 export(callMtVars)
 export(filterMT)
