--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,11 +8,14 @@ export(addMtGeneLabel)
 export(byStrand)
 export(callMT)
 export(callMtVars)
+export(callTNMT)
+export(callTnMtVars)
 export(filterMT)
 export(getMT)
 export(indexMtGenome)
 export(injectMtVariants)
 export(mtCircos)
+export(mtComplex)
 export(mtHGVS)
 export(plotMT)
 exportClasses(MAlignments)
@@ -32,6 +35,7 @@ exportMethods(genome)
 exportMethods(getAnnotations)
 exportMethods(granges)
 exportMethods(locateVariants)
+exportMethods(plot)
 exportMethods(pos)
 exportMethods(predictCoding)
 exportMethods(runLength)
@@ -55,4 +59,6 @@ import(circlize)
 import(ggplot2)
 import(ggthemes)
 import(gmapR)
+import(rsvg)
 import(viridis)
+import(xml2)
