fixing various issues with sc calling

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(callMtVars)
 export(callTNMT)
 export(callTnMtVars)
 export(filterMT)
+export(fixMetadata)
 export(getMT)
 export(indexMtGenome)
 export(injectMtVariants)
@@ -18,6 +19,8 @@ export(mtCircos)
 export(mtComplex)
 export(mtHGVS)
 export(plotMT)
+export(s4Methods)
+export(validMetadata)
 exportClasses(MAlignments)
 exportClasses(MAlignmentsList)
 exportClasses(MVRanges)
