add relatively easy coverage plotting

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(indexMtGenome)
 export(injectMtVariants)
 export(mtCircos)
 export(mtComplex)
+export(mtCoverage)
 export(mtHGVS)
 export(plotMT)
 export(s4Methods)
