--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ exportMethods(snpCall)
 exportMethods(summarizeVariants)
 exportMethods(tallyVariants)
 exportMethods(type)
+import(BiocGenerics)
 import(Biostrings)
 import(GenomicAlignments)
 import(GenomicRanges)
