more BiocCheck compliance fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,5 +61,6 @@ import(VariantAnnotation)
 import(VariantTools)
 import(circlize)
 import(gmapR)
+import(rtracklayer)
 import(viridis)
 import(xml2)
