--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,8 @@ Imports:
     GenomicAlignments,
     SummarizedExperiment
 Suggests:
+    BiocStyle,
+    rmarkdown,
     pkgdown,
     knitr,
     radix, 
