--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: MTseeker
 Type: Package
-Title: Bioconductor Tools for Mitochondrial Variant Analysis
+Title: Bioconductor Tools for Human Mitochondrial Variant Analysis
 Version: 0.9.48
 Date: 2018-10-03
 Author: Tim Triche, Jr., Ben Johnson, Tim Vickers, Noor Sohail
 Authors@R: c(person("Tim", "Triche", role = c("cre", "aut"),
                     email = "tim.triche@gmail.com"),
              person("Ben", "Johnson", role = "aut"),
-             person("Noor", "Sohail", role = "aut"))
+             person("Noor", "Sohail", role = "aut"),
+             person("Tim", "Vickers", role = "ctb"))
 Maintainer: Tim Triche, Jr. <tim.triche@gmail.com>
 Description: Variant analysis tools for mitochondrial genetics. 
 biocViews: Genetics, Metabolomics, VariantAnnotation
