--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,26 @@
 language: r
 
+r: 
+  - bioc-devel
+
 cache: packages
 
 warnings_are_errors: false
 
-r_build_args: "--resave-data"
-
-r_check_args: ""
+script:
+  - Rscript -e "library(devtools); devtools::check()"
+ 
+r_github_packages:
+  - r-lib/covr
 
 bioc_packages: 
   - gmapR
-  - circlize 
+  - IRanges
+  - S4Vectors
+  - Rsamtools
+  - Biostrings
+  - rtracklayer
+  - BiocGenerics
   - Homo.sapiens
   - VariantTools
   - GenomicRanges
