adding MTseekerData suggestion for BioC submission

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,6 +33,7 @@ Imports:
     GenomicAlignments,
     SummarizedExperiment
 Suggests:
+    MTseekerData,
     BiocStyle,
     rmarkdown,
     pkgdown,
