--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,6 @@ Maintainer: Tim Triche, Jr. <tim.triche@gmail.com>
 Description: Variant analysis tools for mitochondrial genetics. 
 biocViews: Genetics, Metabolomics, VariantAnnotation
 Depends:
-    MTseekerData,
     Homo.sapiens,
     jsonlite,
     viridis 
@@ -22,6 +21,7 @@ Imports:
     xml2,
     gmapR,
     IRanges,
+    Biobase,
     circlize,
     Rsamtools,
     S4Vectors,
@@ -30,10 +30,12 @@ Imports:
     VariantTools,
     BiocGenerics,
     GenomicRanges,
+    GenomicFeatures,
     VariantAnnotation,
     GenomicAlignments,
     SummarizedExperiment
 Suggests:
+    MTseekerData,
     BiocStyle,
     rmarkdown,
     pkgdown,
