--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(mtCircos)
 export(mtComplex)
 export(mtCoverage)
 export(mtHGVS)
+export(plotMtCoverage)
 export(s4Methods)
 export(validMetadata)
 exportClasses(MAlignments)
