--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ import(VariantAnnotation)
 import(VariantTools)
 import(circlize)
 import(gmapR)
+import(methods)
 import(rtracklayer)
 import(viridis)
 import(xml2)
