more NAMESPACE twiddling

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,4 +67,9 @@ import(viridis)
 import(xml2)
 importFrom(Biobase,snpCall)
 importFrom(GenomicFeatures,genes)
+importFrom(VariantAnnotation,filt)
 importFrom(graphics,plot)
+importMethodsFrom(Biostrings,type)
+importMethodsFrom(GenomicFeatures,genes)
+importMethodsFrom(IRanges,coverage)
+importMethodsFrom(VariantAnnotation,filt)
