more fiddling with NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ import(BiocGenerics)
 import(Biostrings)
 import(GenomicAlignments)
 import(GenomicRanges)
+import(Homo.sapiens)
 import(IRanges)
 import(Rsamtools)
 import(S4Vectors)
@@ -61,6 +62,7 @@ import(VariantAnnotation)
 import(VariantTools)
 import(circlize)
 import(gmapR)
+import(jsonlite)
 import(methods)
 import(rtracklayer)
 import(viridis)
