--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ exportMethods(tallyVariants)
 exportMethods(type)
 import(BiocGenerics)
 import(Biostrings)
+import(GenomeInfoDb)
 import(GenomicAlignments)
 import(GenomicRanges)
 import(Homo.sapiens)
