even more NAMESPACE twiddling

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,7 +71,13 @@ import(xml2)
 importFrom(Biobase,snpCall)
 importFrom(GenomicFeatures,genes)
 importFrom(VariantAnnotation,filt)
+importFrom(grDevices,col2rgb)
+importFrom(grDevices,rgb)
 importFrom(graphics,plot)
+importFrom(utils,data)
+importFrom(utils,install.packages)
+importFrom(utils,installed.packages)
+importFrom(utils,remove.packages)
 importMethodsFrom(Biostrings,type)
 importMethodsFrom(GenomicFeatures,genes)
 importMethodsFrom(IRanges,coverage)
