--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,7 @@ Depends:
     viridis 
 Imports:
     xml2,
+    utils,
     gmapR,
     methods,
     IRanges,
@@ -25,6 +26,7 @@ Imports:
     graphics,
     Rsamtools,
     S4Vectors,
+    grDevices,
     Biostrings,
     rtracklayer,
     VariantTools,
