--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(callMtVars)
 export(callTNMT)
 export(callTnMtVars)
 export(filterMT)
+export(filterMTvars)
 export(fixMetadata)
 export(getMT)
 export(indexMtGenome)
@@ -25,10 +26,8 @@ exportClasses(MAlignments)
 exportClasses(MAlignmentsList)
 exportClasses(MVRanges)
 exportClasses(MVRangesList)
-exportMethods("counts<-")
 exportMethods(Summary)
 exportMethods(annotation)
-exportMethods(counts)
 exportMethods(coverage)
 exportMethods(encoding)
 exportMethods(fileName)
@@ -74,6 +73,7 @@ importFrom(VariantAnnotation,filt)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,rgb)
 importFrom(graphics,plot)
+importFrom(utils,browseURL)
 importFrom(utils,data)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
