add consensusString and drop RSRS filter from filterMT

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ exportClasses(MVRanges)
 exportClasses(MVRangesList)
 exportMethods(Summary)
 exportMethods(annotation)
+exportMethods(consensusString)
 exportMethods(coverage)
 exportMethods(encoding)
 exportMethods(fileName)
@@ -78,6 +79,7 @@ importFrom(utils,data)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
 importFrom(utils,remove.packages)
+importMethodsFrom(Biostrings,consensusString)
 importMethodsFrom(Biostrings,type)
 importMethodsFrom(GenomicFeatures,genes)
 importMethodsFrom(IRanges,coverage)
