be extremely overbearingly explicit about imports/exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ import(viridis)
 import(xml2)
 importFrom(Biobase,snpCall)
 importFrom(GenomicFeatures,genes)
+importFrom(S4Vectors,endoapply)
 importFrom(VariantAnnotation,filt)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,rgb)
