added stranded mt coverage; begin transitioning to pileup

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(mtComplex)
 export(mtCoverage)
 export(mtHGVS)
 export(plotMtCoverage)
+export(plotStrandedMtCoverage)
 export(s4Methods)
 export(validMetadata)
 exportClasses(MAlignments)
