--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ exportClasses(MVRangesList)
 exportMethods(Summary)
 exportMethods(annotation)
 exportMethods(consensusString)
+exportMethods(coverage)
 exportMethods(encoding)
 exportMethods(fileName)
 exportMethods(filt)
