--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: MTseeker
 Type: Package
 Title: Bioconductor Tools for Human Mitochondrial Variant Analysis
-Version: 1.1.4
+Version: 1.1.5
 Author: Tim Triche [cre, aut], Noor Sohail [aut], Ben Johnson [aut], Tim Vickers [ctb], Azif Zubair [ctb]
 Authors@R: c(person("Tim", "Triche", role = c("cre", "aut"),
                     email = "tim.triche@gmail.com"),
@@ -39,6 +39,7 @@ Imports:
     GenomicFeatures,
     SummarizedExperiment
 Suggests:
+    GmapGenome.Hsapiens.rCRS,
     MTseekerData,
     BiocStyle,
     rmarkdown,
@@ -49,5 +50,5 @@ Suggests:
     rsvg
 License: GPL-3
 Encoding: UTF-8 
-RoxygenNote: 6.1.0
+RoxygenNote: 6.1.1
 VignetteBuilder: knitr
