--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(MVRangesList)
 export(byStrand)
 export(callMT)
 export(callMTVars)
+export(combineMAlignments)
 export(filterMT)
 export(filterMTvars)
 export(fixMetadata)
