add decomposition and annotation of variants
This is meant primarily to subset to things that cause AA changes for
plotting

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(byStrand)
 export(callMT)
 export(callMTVars)
 export(combineMAlignments)
+export(decomposeAndCalcConsequences)
 export(filterMT)
 export(filterMTvars)
 export(fixMetadata)
@@ -69,6 +70,7 @@ import(circlize)
 import(gmapR)
 import(jsonlite)
 import(methods)
+import(parallel)
 import(rtracklayer)
 import(viridis)
 import(xml2)
