Add haploMask functionality

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(fixMetadata)
 export(genomeCoverage)
 export(genomeLength)
 export(getMT)
+export(haploMask)
 export(indexMTGenome)
 export(injectMTVariants)
 export(plotMTCoverage)
