add pileup support

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,10 +19,12 @@ export(genomeLength)
 export(getMT)
 export(indexMTGenome)
 export(injectMTVariants)
+export(pileupMT)
 export(plotMTCoverage)
 export(plotStrandedMTCoverage)
 export(readLength)
 export(s4Methods)
+export(scanMT)
 export(validMetadata)
 exportClasses(MAlignments)
 exportClasses(MAlignmentsList)
