--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,25 +9,32 @@ export(MTcoverage)
 export(MVRanges)
 export(MVRangesList)
 export(byStrand)
-export(callMT)
-export(callMTVars)
 export(combineMAlignments)
 export(decomposeAndCalcConsequences)
+export(depthFilterAndHaploMask)
 export(exportFilteredAsVcf)
 export(filterMT)
 export(filterMTvars)
 export(fixMetadata)
+export(genMTcircos)
+export(genesMTcircos)
 export(genomeCoverage)
 export(genomeLength)
 export(getMT)
+export(getProteinImpact)
 export(haploMask)
 export(importVCF)
 export(indexMTGenome)
+export(initMTcircos)
 export(injectMTVariants)
 export(lift_up_to_rCRS)
+export(locateMTvariants)
+export(newFilterMT)
 export(pileupMT)
+export(pileupXenograft)
 export(plotMTCoverage)
 export(plotStrandedMTCoverage)
+export(rawMTreads)
 export(readLength)
 export(s4Methods)
 export(scanMT)
@@ -59,7 +66,6 @@ exportMethods(scanBamHeader)
 exportMethods(show)
 exportMethods(snpCall)
 exportMethods(summarizeVariants)
-exportMethods(tallyVariants)
 exportMethods(type)
 import(BiocGenerics)
 import(Biostrings)
@@ -77,7 +83,6 @@ import(circlize)
 import(gmapR)
 import(jsonlite)
 import(methods)
-import(parallel)
 import(rtracklayer)
 import(viridis)
 import(xml2)
