--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,14 +84,17 @@ import(gmapR)
 import(jsonlite)
 import(methods)
 import(rtracklayer)
+import(utils)
 import(viridis)
 import(xml2)
 importFrom(Biobase,snpCall)
 importFrom(GenomicFeatures,genes)
 importFrom(S4Vectors,endoapply)
 importFrom(VariantAnnotation,filt)
+importFrom(grDevices,adjustcolor)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,rgb)
+importFrom(graphics,legend)
 importFrom(graphics,plot)
 importFrom(utils,browseURL)
 importFrom(utils,data)
