more fixes for BiocCheck/R CMD check compliance

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,7 +24,6 @@ export(getMT)
 export(getProteinImpact)
 export(haploMask)
 export(importVCF)
-export(indexMTGenome)
 export(initMTcircos)
 export(injectMTVariants)
 export(lift_up_to_rCRS)
@@ -80,11 +79,9 @@ import(SummarizedExperiment)
 import(VariantAnnotation)
 import(VariantTools)
 import(circlize)
-import(gmapR)
 import(jsonlite)
 import(methods)
 import(rtracklayer)
-import(utils)
 import(viridis)
 import(xml2)
 importFrom(Biobase,snpCall)
@@ -98,9 +95,8 @@ importFrom(graphics,legend)
 importFrom(graphics,plot)
 importFrom(utils,browseURL)
 importFrom(utils,data)
-importFrom(utils,install.packages)
-importFrom(utils,installed.packages)
-importFrom(utils,remove.packages)
+importFrom(utils,read.delim)
+importFrom(utils,read.table)
 importMethodsFrom(Biostrings,consensusString)
 importMethodsFrom(Biostrings,type)
 importMethodsFrom(GenomicFeatures,genes)
