more fixes! API is beginning to modernize

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,6 @@ export(MTcoverage)
 export(MVRanges)
 export(MVRangesList)
 export(byStrand)
-export(combineMAlignments)
 export(decomposeAndCalcConsequences)
 export(depthFilterAndHaploMask)
 export(exportFilteredAsVcf)
@@ -42,7 +41,6 @@ exportClasses(MAlignments)
 exportClasses(MAlignmentsList)
 exportClasses(MVRanges)
 exportClasses(MVRangesList)
-exportMethods(Summary)
 exportMethods(annotation)
 exportMethods(consensusString)
 exportMethods(coverage)
@@ -84,6 +82,7 @@ import(rtracklayer)
 import(viridis)
 import(xml2)
 importFrom(Biobase,snpCall)
+importFrom(Biostrings,lcsuffix)
 importFrom(GenomicFeatures,genes)
 importFrom(S4Vectors,endoapply)
 importFrom(VariantAnnotation,filt)
