--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,7 @@ importFrom(grDevices,adjustcolor)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,rgb)
 importFrom(graphics,legend)
+importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(utils,browseURL)
 importFrom(utils,data)
