add getScReads, start pushing pileup fixes (v2)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(genomeCoverage)
 export(genomeLength)
 export(getMT)
 export(getProteinImpact)
+export(getScReads)
 export(importVCF)
 export(initMTcircos)
 export(injectMTVariants)
@@ -64,6 +65,7 @@ exportMethods(snpCall)
 exportMethods(summarizeVariants)
 exportMethods(type)
 import(BiocGenerics)
+import(BiocParallel)
 import(Biostrings)
 import(GenomeInfoDb)
 import(GenomicAlignments)
